fix(datetime-button): buttons wrap instead of truncate (#27872)

--- a/core/src/components/datetime-button/datetime-button.scss
+++ b/core/src/components/datetime-button/datetime-button.scss
@@ -6,11 +6,11 @@
 :host {
   display: flex;
 
+  flex-wrap: wrap;
+
   align-items: center;
 
   justify-content: center;
-
-  min-width: 0;
 }
 
 :host button {
@@ -30,10 +30,6 @@
 
   font-family: inherit;
   font-size: 1rem;
-
-  text-overflow: ellipsis;
-
-  white-space: nowrap;
 
   cursor: pointer;
 
